src/parser/test/parser-tests-gen/data/good/good-26.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: [Seed41,Seed2]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str2": "str",
        "num2": 1,
        "type1_str_1": "str",
        "type1_prop_1": {}
      }
    properties:
      type1_prop_1:
        type: object
      type1_str_1:
        type: string
  Type2:
    type: [Seed3,Seed1]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "str1": "str",
        "num1": 1,
        "type2_prop_1": {},
        "type2_str_1": "str"
      }
    properties:
      type2_str_1:
        type: string
      type2_prop_1:
        type: object
  Type3:
    type: Seed41
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type3_bool_1": true,
        "type3_prop_1": {}
      }
    properties:
      type3_prop_1:
        type: object
      type3_bool_1:
        type: boolean
  Type4:
    type: [Seed1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type4_prop_1": {},
        "type4_bool_1": true
      }
    properties:
      type4_bool_1:
        type: boolean
      type4_prop_1:
        type: (Seed41)|boolean
  Type5:
    type: object|object
    example: {}
  Type6:
    type: Type1
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str2": "str",
        "num2": 1,
        "type1_str_1": "str",
        "type1_prop_1": {},
        "type6_bool_1": true,
        "type6_prop_1": {}
      }
    properties:
      type6_prop_1:
        type: Type2|string
      type6_bool_1:
        type: boolean
  Type7:
    type: object|Seed3
    example: {}
  Type8:
    type: [Seed3,Type3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type3_bool_1": true,
        "type3_prop_1": {},
        "type8_num_2": 1,
        "type8_num_1": 1
      }
    properties:
      type8_num_1:
        type: number
      type8_num_2:
        type: number
  Type9:
    type: [Seed1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type9_prop_1": true,
        "type9_num_1": 1
      }
    properties:
      type9_num_1:
        type: number
      type9_prop_1:
        type: boolean|(Type3)
  Type10:
    type: [Type9,Type4]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type9_prop_1": true,
        "type9_num_1": 1,
        "type4_prop_1": {},
        "type4_bool_1": true,
        "type10_str_1": "str",
        "type10_num_1": 1
      }
    properties:
      type10_num_1:
        type: number
      type10_str_1:
        type: string

/res1:
  post:
    body:
      application/json:
        type: object
        example: {}
/res2:
  post:
    body:
      application/json:
        type: [Type4]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "type4_bool_1": true,
            "type4_prop_1": {
              "str1": "str",
              "num1": 1,
              "str4": "str",
              "num4": 1
            }
          }
/res3:
  post:
    body:
      application/json:
        type: [Seed1,Type8]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str3": "str",
            "num3": 1,
            "str4": "str",
            "num4": 1,
            "type3_prop_1": {},
            "type3_bool_1": true,
            "type8_num_1": 1,
            "type8_num_2": 1
          }
/res4:
  post:
    body:
      application/json:
        type: object
        example: {}
/res5:
  post:
    body:
      application/json:
        type: Type1|object
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1,
            "str2": "str",
            "num2": 1,
            "type1_prop_1": {},
            "type1_str_1": "str"
          }
