src/parser/test/parser-tests-gen/data/bad/bad-64.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: Seed1
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type1_str_1": "str",
        "type1_num_1": 1
      }
    properties:
      type1_num_1:
        type: number
      type1_str_1:
        type: string
  Type2:
    type: Seed41
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type2_prop_1": "str",
        "type2_num_1": 1
      }
    properties:
      type2_num_1:
        type: number
      type2_prop_1:
        type: Seed41
  Type3:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type3_bool_1": true,
        "type3_prop_1": {}
      }
    properties:
      type3_prop_1:
        type: object
      type3_bool_1:
        type: boolean
  Type4:
    type: [Seed1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type4_bool_1": true,
        "type4_prop_1": {}
      }
    properties:
      type4_prop_1:
        type: object
      type4_bool_1:
        type: boolean
  Type5:
    type: Seed41|object
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type6:
    type: object
    example: |
      {
        "type6_bool_1": true,
        "type6_prop_1": true
      }
    properties:
      type6_prop_1:
        type: (boolean|((Type5)))
      type6_bool_1:
        type: boolean
  Type7:
    type: object|Type1
    example: {}
  Type8:
    type: object|Type5
    example: {}
  Type9:
    type: object
    example: |
      {
        "type9_prop_1": {},
        "type9_str_1": "str"
      }
    properties:
      type9_str_1:
        type: string
      type9_prop_1:
        type: object
  Type10:
    type: [Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type10_prop_1": {},
        "type10_num_1": 1
      }
    properties:
      type10_num_1:
        type: number
      type10_prop_1:
        type: object

/res1:
  post:
    body:
      application/json:
        type: [Type8]
        example: {}
/res2:
  post:
    body:
      application/json:
        type: object|object
        example: {}
/res3:
  post:
    body:
      application/json:
        type: object
        example: {}
/res4:
  post:
    body:
      application/json:
        type: object|object
        example: {}
/res5:
  post:
    body:
      application/json:
        type: object
        example: {}
